whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app.kubernetes.io/name: whoami
    tailscale.com/proxy-class: tun-access
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: whoami
    tailscale.com/tags: tag:whoami
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      # whoami is listening on 8080 from --port argument so that non-root user
      # can run container as needs to bind to ports higher than 1024
      targetPort: 8080
  selector:
    app.kubernetes.io/name: whoami
