whoami/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: whoami-gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.1.1.48
  listeners:
    - name: web-gw
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-whoami
spec:
  parentRefs:
    - name: whoami-gateway
  hostnames:
    - whoami.xmple.io
  rules:
    - matches:
        - path:
            type: Exact
            value: /
    - backendRefs:
        - name: whoami
          port: 80
          kind: Service
