whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ts
spec:
  defaultBackend:
    service:
      name: whoami
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - whoami
