whoami/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: network
  hostnames:
    - whoami.xmple.io
  rules:
    - matches:
      - path:
          type: Exact
          value: /
      backendRefs:
        - name: whoami
          port: 80
          kind: Service
